# smart_campus_app

./: README.md  pubspec.yaml
android/app/: build.gradle.kts
backend/: app.py  caht2.py  chat3.py  chat4.py  chatbot.py  djelfa_events.csv  getkhenchelaevmt.py  khenchla_master.py  llm.py  main.py  main2.py  news_usthb.csv  nnnn.py  output.csv  pyproject.toml  scrape_and_save.py  scraped_courses_master.csv  seedata.py  sorted_data.csv  specializations.json  student_news.db  students_data.json  tdm.py  test.py  trans.py  trans2.py  univ-constantine2.dz.py  univ-eloued.dz.py  univ-eloued.txt  univ-khenchela.dz.py  univ-khenchela.txt  univ-oran.dz.py  univ-oran1.txt  univ-oran2.dz.py  univ_djelfa_events.csv  univdjelfadz.py  universities.txt  usthbdz.py
ios/Runner.xcodeproj/: project.pbxproj
lib/: app.dart  main.dart  models.dart
lib/config/: routes.dart  themes.dart
lib/models/: announcement.dart  course.dart  event.dart  message_model.dart  scraped_data_model.dart  university_config.dart  user.dart
lib/repositories/: data_repository.dart
lib/screens/: career_path_screen.dart  course_attendance_screen.dart  course_recommendations_screen.dart  courses_screen.dart  dashboard_screen.dart  events_screen.dart  feedback_analysis_screen.dart  gpa_prediction_screen.dart  home_screen.dart  login_screen.dart  onboarding_screen.dart  profile_screen.dart  register_screen.dart  search_screen.dart  settings_screen.dart  splash_screen.dart  university_config_screen.dart  university_list_screen.dart
test/: widget_test.dart
web/: index.html  manifest.json
(+20 files in other folders)
